--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-:root {
-}
+/* :root {
+} */
 
 @font-face {
   font-family: "Norse";
@@ -8,42 +8,51 @@
 
 body {
   height: 100vh;
-  font-family: "Norse", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 main {
   display: flex;
+  height: inherit;
 }
 
-.side-logo {
-  display: flex;
+.side-image {
+  flex: 1;
 }
 
-.side-logo__background {
-  height: 1024px;
-}
-
-.side-logo__logo-section {
-  display: flex;
+.side-image__logo-section {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.6);
+  align-self: center;
+  width: 25%;
+  height: 8vw;
+  display: flex;
   align-items: center;
   justify-content: center;
-  top: calc(1024px / 3 - 128px);
-  width: 682px;
-  height: 128px;
 }
 
-.side-logo__logo-section__logo {
-  width: 80px;
+.side-image__logo-section__logo {
+  /* Adjust the height of the logo according to viewport height */
+  height: 7vw;
 }
 
-.side-logo__logo-section__text {
-  font-size: 75px;
+.side-image__logo-section__text {
+  font-family: "Norse", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* Adjust the size of the font according to viewport height */
+  font-size: 6vw;
   color: white;
 }
 
-.main-content {
-  flex: auto;
+.side-image__bg {
+  /* Set the dimensions to fill the item wrapper */
+  width: 100%;
+  height: 100%;
+  /* The magic property: Fills the container while preserving aspect ratio */
+  object-fit: cover;
+}
+
+.content {
+  flex: 3;
 }
