--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* :root {
-} */
+:root {
+}
 
 @font-face {
   font-family: "Norse";
@@ -10,6 +10,8 @@ body {
   height: 100vh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0%;
+  overflow: hidden;
 }
 
 main {
@@ -25,7 +27,7 @@ main {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.6);
   align-self: center;
-  width: 25%;
+  width: 33.25%;
   height: 8vw;
   display: flex;
   align-items: center;
@@ -54,5 +56,30 @@ main {
 }
 
 .content {
-  flex: 3;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
 }
+
+.content__info {
+  flex: auto;
+  padding: 4%;
+}
+
+form {
+  display: flex;
+  flex: auto;
+}
+
+.form__container {
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: center;
+}
+
+.form__container__submit-btn {
+  margin: 4%;
+}
+
